--- a/public/css/main.css
+++ b/public/css/main.css
@@ -43,11 +43,15 @@ input[type=password] {
 input[type=submit] {
 	margin-top: 2px;
 	padding: 3px;
-	background-color: #777;
+	background-color: #111;
 	border: 0;
 	width: 80px;
 }
 
 input[type=submit]:hover {
 	background-color: #FFF;
+}
+
+#page-3 {
+    margin-top: 8px;
 }
